--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,11 @@
   border: 2px dashed #000000;
 }
 
+.app-title {
+  font-family: 'Sacramento', sans-serif;
+  font-size: 40px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
