--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -68,6 +64,22 @@
 
 .profile {
   cursor: pointer;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sidebar {
+  flex: 0 0 auto;
+  padding-right: 16px;
+}
+
+.main-content {
+  flex: 1 1 auto;
+  max-width: 570px;
 }
 
 @keyframes App-logo-spin {
